7.22.05 jowaxman

__init__.py
  - added ('Annotation data'), 13 to Associated Files

eegview.py
  - update mouse position on motion
  - highlight a selected area in eegPlot
  - lock electrode checkbutton
  - annotation a dialog box
  - changed some deprecated code from pygtk2.4
  - added support for annotation file, *.ann.csv
  - highlight areas from *.ann.csv
  - annotation browser

data.py
  - warn if old-style CSV file found
  - name of annotation file should be <eeg file base>.ann.csv


7.25.05 jowaxman

eegview.py
  - Delete annotations
  - When you move to an annotation using the annotation browser, center
    it in the axes
  - also adjust limits to display annotation larger than current limits

data.py
  - starting to add support for saving files

7.28.05 jowaxman

- ann browser now uses annman
- set zorder of new rects to 3 and matched color of highlight and its rect
- added show/hide buttons to ann browser
- added annotations menu
- added turn on/off horiz/vert cursor; save in .rc
- un/select annotations using either left or right mouse button

7.29.05 jowaxman
- added hide/show in ann browser
- renamed eegPlot to eegplot everywhere (there were some mismatches in 
  named params)
- resizing of annotations

8.1.05 jowaxman
- resizing of annotations
- commented out all pygtk.require('2.0')
- save ann file after changes (edit, delete, resize)