@@ -2647,22 +2647,17 @@ the filename.
 	  </child>
 
 	  <child>
-	    <widget class="GtkLabel" id="dlgAnnotate_labelStartTime">
+	    <widget class="GtkEntry" id="dlgAnnotate_entryStartTime">
+	      <property name="width_request">60</property>
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">0.0</property>
-	      <property name="use_underline">False</property>
-	      <property name="use_markup">False</property>
-	      <property name="justify">GTK_JUSTIFY_LEFT</property>
-	      <property name="wrap">False</property>
-	      <property name="selectable">False</property>
-	      <property name="xalign">0.5</property>
-	      <property name="yalign">0.5</property>
-	      <property name="xpad">0</property>
-	      <property name="ypad">0</property>
-	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	      <property name="width_chars">-1</property>
-	      <property name="single_line_mode">False</property>
-	      <property name="angle">0</property>
+	      <property name="can_focus">True</property>
+	      <property name="editable">True</property>
+	      <property name="visibility">True</property>
+	      <property name="max_length">0</property>
+	      <property name="text" translatable="yes">0.0</property>
+	      <property name="has_frame">True</property>
+	      <property name="invisible_char">*</property>
+	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
@@ -2697,22 +2692,17 @@ the filename.
 	  </child>
 
 	  <child>
-	    <widget class="GtkLabel" id="dlgAnnotate_labelEndTime">
+	    <widget class="GtkEntry" id="dlgAnnotate_entryEndTime">
+	      <property name="width_request">60</property>
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">0.0</property>
-	      <property name="use_underline">False</property>
-	      <property name="use_markup">False</property>
-	      <property name="justify">GTK_JUSTIFY_LEFT</property>
-	      <property name="wrap">False</property>
-	      <property name="selectable">False</property>
-	      <property name="xalign">0.5</property>
-	      <property name="yalign">0.5</property>
-	      <property name="xpad">0</property>
-	      <property name="ypad">0</property>
-	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	      <property name="width_chars">-1</property>
-	      <property name="single_line_mode">False</property>
-	      <property name="angle">0</property>
+	      <property name="can_focus">True</property>
+	      <property name="editable">True</property>
+	      <property name="visibility">True</property>
+	      <property name="max_length">0</property>
+	      <property name="text" translatable="yes">0.0</property>
+	      <property name="has_frame">True</property>
+	      <property name="invisible_char">*</property>
+	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
